# instagram-autopilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-post.yml  refresh-token.yml
prompts/: caption.txt  caption_prompt.txt  carousel_prompt.txt  reel_prompt.txt  topic.txt  topic_prompt.txt
src/: config.py  content_generator.py  image_generator.py  instagram_publisher.py  main.py  media_uploader.py  pillar.py  schedule.py  settings.py  tts_generator.py  video_maker.py
src/adapters/: bedrock.py  cloudinary_host.py  composio.py  github_trending.py  hackernews.py  huggingface_papers.py  producthunt.py  reddit.py
src/content/: caption.py  dedup.py  topic.py  trends.py
src/flows/: carousel_flow.py  image_flow.py  reel_flow.py
src/generator/: image.py  reel.py  text.py  trends.py
src/media/: image.py  video.py
src/publisher/: composio_auth.py  instagram.py  twitter.py
src/publishing/: carousel.py  image_post.py  reel.py
src/utils/: image_host.py  template_image.py
tests/: conftest.py  test_composio_auth.py  test_config.py  test_generator.py  test_json_extract.py  test_pillar.py  test_publisher.py  test_schedule.py  test_utils.py
tests/adapters/: test_bedrock.py  test_cloudinary_host.py  test_composio.py  test_github_trending.py  test_huggingface_papers.py  test_producthunt.py
tests/content/: test_caption.py  test_topic.py  test_trends.py
tests/media/: test_image.py  test_video.py
tests/publishing/: test_carousel.py  test_image_post.py  test_reel.py
