[project]
name = "instagram-autopilot"
version = "0.2.0"
description = "Automated Instagram + X content creation and posting using AWS Bedrock AI + Composio SDK"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
